--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <title>Bike(whe)re?</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>bikeshare-vue</title>
-  </head>
-  <body>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./index.css">
+</head>
+<body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <script src="/dist/build.js"></script>
+</body>
 </html>
