Initiated howto3 and updated intro card-body

--- a/intro.html
+++ b/intro.html
@@ -15,33 +15,46 @@
     <h2>What is Vue.js?</h2>
     <p>Vue.js is a javascript-based framework that is advertised as being approachable, versatile, and performant. It was developed solely by one person, Evan You, in 2014 which gained enough traction to be compared alongside ReactJS and AngularJS, where these two frameworks were developed by large companies (Facebook and Google, to be exact).</p>
     <div>
+
         <div class="card">
-            <h3 class="card-title">Technological Bases</h3>
-            <div class="card-body"></div>
-        </div>
-        <div class="card">
-            <h3 class="card-title">Popularity</h3>
             <div class="card-body">
-                <p>The Vuejs github currently has 159 contributors to the improvement of its content, with 75526 stars. However, with this high rating in mind, a recent survey conducted by Sacha Greif showed that there are still 23% of surveyed users who are unaware of Vue, where most of the other prominent javascript frameworks sit at 95~100% awareness.</p>
-                <p>From the various sources referred to, Vue.js is on the rise to popularity. Its features results in high satisfaction within its user population.</p>
-                <p>Some well-known examples of applications of Vue.js are: <strong> Alibaba, Baidu, Expedia, Nintendo, GitLab.</strong></p>
+                <h3 class="card-title">Technological Bases</h3>
+                <div class="card-text"></div>
             </div>
         </div>
         <div class="card">
-            <h3 class="card-title">Strengths</h3>
-            <div class="card-body"></div>
+            <div class="card-body">
+                <h3 class="card-title">Popularity</h3>
+                <div class="card-text">
+                    <p>The Vuejs github currently has 159 contributors to the improvement of its content, with 75526 stars. However, with this high rating in mind, a recent survey conducted by Sacha Greif showed that there are still 23% of surveyed users who are unaware of Vue, where most of the other prominent javascript frameworks sit at 95~100% awareness.</p>
+                    <p>From the various sources referred to, Vue.js is on the rise to popularity. Its features results in high satisfaction within its user population.</p>
+                    <p>Some well-known examples of applications of Vue.js are: <strong> Alibaba, Baidu, Expedia, Nintendo, GitLab.</strong></p>
+                </div>
+            </div>
         </div>
         <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">Strengths</h3>
+                <div class="card-text"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
             <h3 class="card-title">Weaknesses</h3>
-            <div class="card-body"></div>
+            <div class="card-text"></div>
+            </div>
         </div>
         <div class="card">
-            <h3 class="card-title">Types of Developers</h3>
-            <div class="card-body">Developers who are interested in learning a new framework to create cleaner code, cleaner HTML files, or who like to separate codes for organization of dynamic webpage components. Smaller-scale organizations who can afford to switch their codes or new teams that are creating new projects.</div>
+            <div class="card-body">
+                <h3 class="card-title">Types of Developers</h3>
+                <div class="card-text">Developers who are interested in learning a new framework to create cleaner code, cleaner HTML files, or who like to separate codes for organization of dynamic webpage components. Smaller-scale organizations who can afford to switch their codes or new teams that are creating new projects.</div>
+            </div>
         </div>
         <div class="card">
-            <h4 class="card-title">Application of framework</h4>
-            <div class="card-body"></div>
+            <div class="card-body">
+                <h4 class="card-title">Application of framework</h4>
+                <div class="card-text"></div>
+            </div>
         </div>
     </div>
 </div>
