--- a/howto3.html
+++ b/howto3.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./external.css">
 </head>
 <body>
 <div class="container">
-    <div class="jumbotron">
-        <h1 class="text-center">How-to with Vue.js</h1>
+    <div class="jumbotron text-center">
+        <h1>How-to with Vue.js</h1>
         <h3>Now that you are ready to learn...</h3>
     </div>
 </div>
@@ -28,10 +28,10 @@
             <div class="card-body">
                 <h2 class="card-title">Structure of Project</h2>
                 <div class="card-text">
-                    <h6>index.html</h6>
+                    <h4>index.html</h4>
                     <p>Contains skeleton of the html document and links to App and scripts from build.js within the dist folder</p>
-                    <h6>index.css (optional)</h6>
-                    <h6>dist foler</h6>
+                    <h4>index.css (optional)</h4>
+                    <h4>dist foler</h4>
                     <p>Is compiled each time updates in the projects need to be run on the web server. It renders all components into one file, build.js</p>
                     <ul>
                         <li>main.js (creates a Vue instance, App)</li>
@@ -97,7 +97,7 @@
                     <h4>2. Figure out what information is available and what information I need</h4>
                     <p>From the Bikeshare API, I found that there are two databases that are useful for me – one that lists out all the bike stations in Toronto with information such as location, payment method, types of station; the other one lists out the bike and dock information for each station. </p>
                     <h4>3. Design project structures</h4>
-                    
+
                     <h4></h4>
                 </div>
             </div>
