update media files directory

--- a/howto3.html
+++ b/howto3.html
@@ -38,7 +38,7 @@
         <div class="card">
             <div class="card-body">
                 <h2 class="card-title">Model-View-Controller</h2>
-                <img class="" src="./MVC.JPG">
+                <img class="" src="./media/MVC.JPG">
                 <p class="card-text">
                     A model “manages data, logic, rules” of the application; view is the component that determines the interface; and controller is the element that reacts to changes in user input (Wikipedia). A user sees the view and interacts with controller. Upon a change has been made, the controller receives the changed data, manipulates the model, which then updates the view for the user to see.
                 </p>
@@ -123,11 +123,11 @@
                     <div class="container">
                         <div class="col-lg-6">
                             <h5>Before</h5>
-                            <img src="./originalDesign.JPG">
+                            <img src="./media/originalDesign.JPG">
                         </div>
                         <div class="col-lg-6">
                             <h5>After</h5>
-                            <img src="./newDesign.JPG">
+                            <img src="./media/newDesign.JPG">
                         </div>
                     </div>
                     <h4>4. Start coding it up!</h4>
