--- a/intro.html
+++ b/intro.html
@@ -11,22 +11,22 @@
 <div class="container">
     <h1 class="jumbotron text-center">Welcome to Vue.js Introduction</h1>
     <ul class="nav nav-tabs">
-      <li class="nav-item">
+      <li class="nav-item nav-fill">
         <a class="nav-link active" href="#">Introduction</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-fill">
         <a class="nav-link" href="/install2.html">Installation</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-fill">
         <a class="nav-link" href="/howto3.html">Tutorial</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-fill">
         <a class="nav-link" href="/">Bike(whe)re</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-fill">
         <a class="nav-link" href="/conclusion5.html">Conclusion</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item nav-fill">
         <a class="nav-link" href="/reference6.html">References</a>
       </li>
     </ul>
