--- a/install2.html
+++ b/install2.html
@@ -41,7 +41,9 @@
                     <table>
                         <tr>
                             <td class="code">
-                                $npm install vue
+                                <pre>
+$npm install vue
+                                </pre>
                             </td>
                         </tr>
                     </table>
@@ -58,13 +60,13 @@
                         <tr>
                             <td class="code">
                                 <pre>
-                                $ npm install --global vue-cli
-                                # create a new project using the "webpack" template
-                                $ vue init webpack my-project
-                                # install dependencies and go!
-                                $ cd my-project
-                                $ npm install
-                                $ npm run dev
+$ npm install --global vue-cli
+# create a new project using the "webpack" template
+$ vue init webpack my-project
+# install dependencies and go!
+$ cd my-project
+$ npm install
+$ npm run dev
                                 </pre>
                             </td>
                         </tr>
