Completed install2 w/ img

--- a/install2.html
+++ b/install2.html
@@ -38,15 +38,7 @@
             <div class="card-body">
                 <h2 class="card-title">Step 1: NPM</h2>
                 <div class="card-text">
-                    <table>
-                        <tr>
-                            <td class="code">
-                                <pre>
-$npm install vue
-                                </pre>
-                            </td>
-                        </tr>
-                    </table>
+                    <pre class="code">$npm install vue</pre>
                 </div>
             </div>
         </div>
@@ -55,25 +47,40 @@ $npm install vue
                 <h2 class="card-title">Step 2: CLI</h2>
                 <div class="card-text">
                     <p>Great for building single-page application on the run. Vue.org recommends prior knowledge in Node.js or active learning in their guide if using CLI.</p>
-                    <table>
-                        <caption>Referenced from Vue.org</caption>
-                        <tr>
-                            <td class="code">
-                                <pre>
-$ npm install --global vue-cli
+                    <div>
+                        <pre class="code">
+    $ npm install --global vue-cli
+                        </pre>
+                        <img src="./media/install.JPG">
+                    </div>
+                    <div>
+                        <pre>
 # create a new project using the "webpack" template
-$ vue init webpack my-project
+$ vue init webpack bikewhere
 # install dependencies and go!
-$ cd my-project
+                        </pre>
+                        <img src="./media/newProject.JPG">
+                    </div>
+                    <div>
+                        <pre>
+$ cd bikewhere
 $ npm install
-$ npm run dev
-                                </pre>
-                            </td>
-                        </tr>
-                    </table>
+                        </pre>
+                        <img src="./media/npmInstall.JPG">
+                    </div>
+                    <div>
+                        <pre>
+$ npm run build
+                        </pre>
+                        <img src="./media/npmRunBuild.JPG">
+                    </div>
+                    <div>
+                        <img src="./media/vueFull.JPG">
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
