--- a/install2.html
+++ b/install2.html
@@ -49,32 +49,29 @@
                     <p>Great for building single-page application on the run. Vue.org recommends prior knowledge in Node.js or active learning in their guide if using CLI.</p>
                     <div>
                         <pre class="code">
-    $ npm install --global vue-cli
-                        </pre>
+    $ npm install --global vue-cli</pre>
                         <img src="./media/install.JPG">
                     </div>
                     <div>
                         <pre>
 # create a new project using the "webpack" template
 $ vue init webpack bikewhere
-# install dependencies and go!
-                        </pre>
+# install dependencies and go!</pre>
                         <img src="./media/newProject.JPG">
                     </div>
                     <div>
                         <pre>
 $ cd bikewhere
-$ npm install
-                        </pre>
+$ npm install</pre>
                         <img src="./media/npmInstall.JPG">
                     </div>
                     <div>
                         <pre>
-$ npm run build
-                        </pre>
+$ npm run build</pre>
                         <img src="./media/npmRunBuild.JPG">
                     </div>
                     <div>
+                        <p>Final Product</p>
                         <img src="./media/vueFull.JPG">
                     </div>
                 </div>
