--- a/intro.html
+++ b/intro.html
@@ -39,7 +39,11 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title">Technological Bases</h3>
-                <div class="card-text"></div>
+                <div class="card-text">
+                    <p>Vue.js, which can be suggested by its name, is based upon the Javascript language. With this framework, the integration of the Javascript scripts and HTML templates in website creation and the interaction between the two languages are improved to be more intuitive and straight-forward, with several Vue specific directives that are especially useful.\n
+                    Vue.js features development of components-based, front-end rendering, dynamic websites.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -55,13 +59,24 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title">Strengths</h3>
-                <div class="card-text"></div>
+                <div class="card-text">
+                    <p>Front-end rendering allows dynamic interactions to be very fast on update</p>
+                    <p>Once the concept of MVC is established, coding with Vue is very intuitive</p> 
+                    <p>Easy to learn</p>
+                    <p>Flexibility of structures to fit developer’s needs</p>
+                    <p>Lightweight</p>
+                    <p>Single-file component: templates, scripts, styles</p>
+                </div>
             </div>
         </div>
         <div class="card">
             <div class="card-body">
             <h3 class="card-title">Weaknesses</h3>
-            <div class="card-text"></div>
+            <div class="card-text">
+                <p>Due to its early stage in development, there has been limited update (we are at Vue 2.0 now)</p>
+                <p>Restrictions on components lead to requirement to split components into smaller components</p>
+                <p>No built-in testing guidance</p>
+            </div>
             </div>
         </div>
         <div class="card">
@@ -73,7 +88,12 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Application of framework</h4>
-                <div class="card-text"></div>
+                <div class="card-text">
+                    <ul>
+                        <li>Single page applications</li>
+                        <li>User interfaces (UI)</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
