debugged font-size

--- a/intro.html
+++ b/intro.html
@@ -82,7 +82,11 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title">Types of Developers</h3>
-                <div class="card-text">Developers who are interested in learning a new framework to create cleaner code, cleaner HTML files, or who like to separate codes for organization of dynamic webpage components. Smaller-scale organizations who can afford to switch their codes or new teams that are creating new projects.</div>
+                <div class="card-text">
+                    <p>
+                    Developers who are interested in learning a new framework to create cleaner code, cleaner HTML files, or who like to separate codes for organization of dynamic webpage components. Smaller-scale organizations who can afford to switch their codes or new teams that are creating new projects.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="card">
