--- a/install2.html
+++ b/install2.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="jumbotron text-center">Installation of Vue.js</h1>
+    <div class="jumbotron text-center">
+    <h1>Installation of Vue.js</h1>
+    </div>
     <ul class="nav nav-tabs">
       <li class="nav-item nav-fill">
         <a class="nav-link" href="/intro.html">Introduction</a>
@@ -80,6 +82,6 @@ $ npm run build</pre>
 
     </div>
 </div>
-
+<footer>&nbsp;</footer>
 </body>
 </html>
