--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="jumbotron text-center">Welcome to Vue.js Introduction</h1>
+    <div class="jumbotron text-center">
+        <h1>Welcome to Vue.js Introduction</h1>
+    </div>
     <ul class="nav nav-tabs">
       <li class="nav-item nav-fill">
         <a class="nav-link active" href="#">Introduction</a>
