Fixed .jpg case and npm code indent

--- a/install2.html
+++ b/install2.html
@@ -51,30 +51,30 @@
                     <p>Great for building single-page application on the run. Vue.org recommends prior knowledge in Node.js or active learning in their guide if using CLI.</p>
                     <div>
                         <pre class="code">
-    $ npm install --global vue-cli</pre>
-                        <img src="./media/install.JPG">
+$ npm install --global vue-cli</pre>
+                        <img src="./media/install.jpg">
                     </div>
                     <div>
                         <pre>
 # create a new project using the "webpack" template
 $ vue init webpack bikewhere
 # install dependencies and go!</pre>
-                        <img src="./media/newProject.JPG">
+                        <img src="./media/newProject.jpg">
                     </div>
                     <div>
                         <pre>
 $ cd bikewhere
 $ npm install</pre>
-                        <img src="./media/npmInstall.JPG">
+                        <img src="./media/npmInstall.jpg">
                     </div>
                     <div>
                         <pre>
 $ npm run build</pre>
-                        <img src="./media/npmRunBuild.JPG">
+                        <img src="./media/npmRunBuild.jpg">
                     </div>
                     <div>
                         <p>Final Product</p>
-                        <img src="./media/vueFull.JPG">
+                        <img src="./media/vueFull.jpg">
                     </div>
                 </div>
             </div>
