--- a/conclusion5.html
+++ b/conclusion5.html
@@ -21,13 +21,13 @@
             <a class="nav-link" href="install2.html">Installation</a>
         </li>
         <li class="nav-item nav-fill">
-            <a class="nav-link" href="how">Tutorial</a>
+            <a class="nav-link" href="howto3.html">Tutorial</a>
         </li>
         <li class="nav-item nav-fill">
             <a class="nav-link" href="/">Bike(whe)re</a>
         </li>
         <li class="nav-item nav-fill">
-            <a class="nav-link active" href="/conclusion5.html">Conclusion</a>
+            <a class="nav-link active" href="#">Conclusion</a>
         </li>
         <li class="nav-item nav-fill">
             <a class="nav-link" href="reference6.html">References</a>
