--- a/reference6.html
+++ b/reference6.html
@@ -21,7 +21,7 @@
             <a class="nav-link" href="install2.html">Installation</a>
         </li>
         <li class="nav-item nav-fill">
-            <a class="nav-link active" href="#">Tutorial</a>
+            <a class="nav-link" href="howto3.html">Tutorial</a>
         </li>
         <li class="nav-item nav-fill">
             <a class="nav-link" href="/">Bike(whe)re</a>
@@ -30,7 +30,7 @@
             <a class="nav-link" href="/conclusion5.html">Conclusion</a>
         </li>
         <li class="nav-item nav-fill">
-            <a class="nav-link" href="reference6.html">References</a>
+            <a class="nav-link active" href="#">References</a>
         </li>
     </ul>
 </div>
