text align and table shift

--- a/howto3.html
+++ b/howto3.html
@@ -126,16 +126,16 @@
                 <p>Using an available API, the Bikeshare API in this case, I wanted to create an interactive one-page application that demonstrates the implementation of basic Vue.js directives and libraries.</p>
                 <h3>1. Design the basic page-view and objective</h3>
                 <div class="container">
-                    <table class="col-lg-10 col-lg-offset-1">
+                    <table class="col-lg-8 col-lg-offset-2">
                         <tr>
-                            <th colspan="2"><strong> TITLE</strong></th>
+                            <th colspan="2" style="text-align: center;"><strong> TITLE</strong></th>
                         </tr>
                         <tr>
                             <td>Left half: information about station where you retrieve your bike</td>
                             <td>Right half: information about station where you’ll park</td>
                         </tr>
                         <tr>
-                            <td colspan="2">What can I do with these information?</td>
+                            <td colspan="2" style="text-align: center;">What can I do with these information?</td>
                         </tr>
                     </table>
                 </div>
