added conclusion retrospect and reverted table css

--- a/conclusion5.html
+++ b/conclusion5.html
@@ -71,7 +71,7 @@
         <div class="card-body">
             <h2 class="card-title">Would I have done things differently in retrospect?</h2>
             <p class="card-text">
-                
+                In retrospect, I think I would spend some more time to use Vue router to create multiple pages and url links and route them together. For this particular project, I used the webpack simple to initiate. I could have also used webpack with full feature to experience Vue in a more comprehensive manner.
             </p>
         </div>
     </div> 
