Updated th -> bold td

--- a/howto3.html
+++ b/howto3.html
@@ -69,27 +69,27 @@
             <div class="card-text">
                 <table>
                     <tr>
-                        <th>v-model</th>
+                        <td style="font-weight: bold;">v-model</td>
                         <td>binds to value from user input or component output</td>
                     </tr>
                     <tr>
-                        <th>v-bind (shorthand = : )</th>
+                        <td style="font-weight: bold;">v-bind (shorthand = : )</td>
                         <td>reactively updates HTML</td>
                     </tr>
                     <tr>
-                        <th>v-for</th>
+                        <td style="font-weight: bold;">v-for</td>
                         <td>using a for loop to insert html elements. Has a higher priority if combined with v-if.</td>
                     </tr>
                     <tr>
-                        <th>v-on (shorthand = @)</th>
+                        <td style="font-weight: bold;">v-on (shorthand = @)</td>
                         <td>listens to DOM events</td>
                     </tr>
                     <tr>
-                        <th>v-if</th>
+                        <td style="font-weight: bold;">v-if</td>
                         <td>attributes that can control insertion or removal of element</td>
                     </tr>
                     <tr>
-                        <th>{{variable}}</th>
+                        <td style="font-weight: bold;">{{variable}}</td>
                         <td>substitutes value of variable in html template</td>
                     </tr>
                 </table>
@@ -103,15 +103,15 @@
             <div class="card-text">
                 <table>
                     <tr>
-                        <th>created ()</th>
+                        <td style="font-weight: bold;">created ()</td>
                         <td>Runs when the page is first accessed</td>
                     </tr>
                     <tr>
-                        <th>mounted ()</th>
+                        <td style="font-weight: bold;">mounted ()</td>
                         <td>Runs when instance is rendered</td>
                     </tr>
                     <tr>
-                        <th>updated ()</th>
+                        <td style="font-weight: bold;">updated ()</td>
                         <td>Called when data change caused DOM to re-render and patch</td>
                     </tr>
                 </table>
