--- a/conclusion5.html
+++ b/conclusion5.html
@@ -18,10 +18,10 @@
             <a class="nav-link" href="/intro.html">Introduction</a>
         </li>
         <li class="nav-item nav-fill">
-            <a class="nav-link" href="install2.html">Installation</a>
+            <a class="nav-link" href="/install2.html">Installation</a>
         </li>
         <li class="nav-item nav-fill">
-            <a class="nav-link" href="howto3.html">Tutorial</a>
+            <a class="nav-link" href="/howto3.html">Tutorial</a>
         </li>
         <li class="nav-item nav-fill">
             <a class="nav-link" href="/">Bike(whe)re</a>
@@ -30,7 +30,7 @@
             <a class="nav-link active" href="#">Conclusion</a>
         </li>
         <li class="nav-item nav-fill">
-            <a class="nav-link" href="reference6.html">References</a>
+            <a class="nav-link" href="/reference6.html">References</a>
         </li>
     </ul>
 </div>
