--- a/howto3.html
+++ b/howto3.html
@@ -18,7 +18,7 @@
         <a class="nav-link" href="/intro.html">Introduction</a>
       </li>
       <li class="nav-item nav-fill">
-        <a class="nav-link" href="install2.html">Installation</a>
+        <a class="nav-link" href="/install2.html">Installation</a>
       </li>
       <li class="nav-item nav-fill">
         <a class="nav-link active" href="#">Tutorial</a>
@@ -30,7 +30,7 @@
         <a class="nav-link" href="/conclusion5.html">Conclusion</a>
       </li>
       <li class="nav-item nav-fill">
-        <a class="nav-link" href="reference6.html">References</a>
+        <a class="nav-link" href="/reference6.html">References</a>
       </li>
     </ul>
 </div>
