--- a/install2.html
+++ b/install2.html
@@ -29,7 +29,7 @@
         <a class="nav-link" href="/conclusion5.html">Conclusion</a>
       </li>
       <li class="nav-item nav-fill">
-        <a class="nav-link" href="reference6.html">References</a>
+        <a class="nav-link" href="/reference6.html">References</a>
       </li>
     </ul>
 </div>
