--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:fb="http://ogp.me/ns/fb#">
 <head>
-    <title>Bike(whe)re?</title>
+    <title>BikeWhere</title>
     <meta charset="utf-8">
+    <meta name="description" content="Bikeshare App Created with Vue.js">
+    <meta name="keywords" content="Bikeshare, Javascript, Vue, Vue.js, Toronto">
+    <meta name="author" content="Irene Poon">
+    <meta property="og:title" content="BikeWhere" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://irenepoon.com" />
     <meta property="og:image" content="./media/complete_map.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
