--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="BikeWhere" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://irenepoon.com" />
-    <meta property="og:image" content="./media/complete_map.jpg" />
+    <meta property="og:image" content="http://irenepoon.com/media/complete_map.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./external.css">
