--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="http://irenepoon.com" />
     <meta property="og:image" content="http://irenepoon.com/media/complete_map.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./media/bike.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./external.css">
 </head>
