--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Irene Poon">
     <meta property="og:title" content="BikeWhere" />
     <meta property="og:type" content="website" />
-<!--     <meta property="og:url" content="http://irenepoon.com" /> -->
+    <meta property="og:description" content="Bikeshare App Created with Vue.js">
     <meta property="og:image" content="http://irenepoon.com/media/complete_map.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./media/bike.png">
