--- a/install2.html
+++ b/install2.html
@@ -82,6 +82,6 @@ $ npm run build</pre>
 
     </div>
 </div>
-<footer>&nbsp;</footer>
+<footer class="container-fluid">Copyright &copy; 2018 Irene Poon</footer>
 </body>
 </html>
