--- a/intro.html
+++ b/intro.html
@@ -104,6 +104,6 @@
         </div>
     </div>
 </div>
-<footer>&nbsp;</footer>
+<footer class="container-fluid">Copyright &copy; 2018 Irene Poon</footer>
 </body>
 </html>
