--- a/reference6.html
+++ b/reference6.html
@@ -43,6 +43,6 @@
         <li>https://en.wikipedia.org/wiki/Model%E2%80%93view%E2%80%93controller</li>
     </ul>
 </div>
-<footer>&nbsp;</footer>
+<footer class="container-fluid">Copyright &copy; 2018 Irene Poon</footer>
 </body>
 </html>
