--- a/conclusion5.html
+++ b/conclusion5.html
@@ -84,6 +84,6 @@
         </div>
     </div>    
 </div>
-<footer>&nbsp;</footer>
+<footer class="container-fluid">Copyright &copy; 2018 Irene Poon</footer>
 </body>
 </html>
